Fix pager + disabled buttons + select overflow

--- a/assets/sb-admin/css/_global.scss
+++ b/assets/sb-admin/css/_global.scss
@@ -56,3 +56,7 @@ a {
         font-weight: 800;
     }
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
