--- a/assets/sb-admin/css/navs/_sidebar.scss
+++ b/assets/sb-admin/css/navs/_sidebar.scss
@@ -135,7 +135,7 @@ $icon-width: 32px;
         text-decoration: none;
         font-size: 1rem;
         font-weight: 800;
-        padding: 1.5rem 1rem;
+        padding: 1rem;
         text-align: center;
         text-transform: uppercase;
         letter-spacing: 0.05rem;
